# an-zlib

./: .gitignore  CMakeLists.txt  build-linux.bash  build-windows.cmd  build-windows.ps1
script/: build-darwin-preset.zsh  build-darwin.zsh  build-linux-clean.bash  build-linux-preset.bash  build-linux-quick.bash  build-linux.bash  build-windows-preset.cmd  build-windows.ps1
source/: CMakeLists.txt
source/cmake-modules/: MSVC-MyRuntimeConfig.cmake
source/zlib/: CMakeLists.txt
source/zlib/win32/: zlib1.rc
